<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/calc_summary_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcSummaryTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/calculations_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_summary_txt"
        tools:context=".ResultsActivity">

        <TableRow>

            <TextView
                android:text="@string/tableCategoryTxt"
                android:textStyle="bold" />

            <TextView
                android:text="@string/tableTermTxt"
                android:textStyle="bold" />

            <TextView
                android:text="@string/tableAmortP"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/tableNumOfPaymentsTxt" />

            <TextView
                android:id="@+id/num_pay_term"
                android:text="60" />

            <TextView
                android:id="@+id/num_pay_period"
                android:text="300" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/tableMortgagePaymentTxt" />

            <TextView
                android:id="@+id/monthly_payment_term"
                android:text="$581.00" />

            <TextView
                android:id="@+id/monthly_payment_period"
                android:text="$581.00" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/tablePrepaymentTxt" />

            <TextView
                android:id="@+id/prepay_term"
                android:text="$0.00" />

            <TextView
                android:id="@+id/prepay_period"
                android:text="$0.00" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/tablePrinciplePaymentsTxt" />

            <TextView
                android:id="@+id/principle_payments_term"
                android:text="$11500.00 " />

            <TextView
                android:id="@+id/principle_payments_period"
                android:text="$100000.00" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/tableInterestPaymentsTxt" />

            <TextView
                android:id="@+id/interest_payments_term"
                android:text="$23403.00" />

            <TextView
                android:id="@+id/interest_payments_period"
                android:text="$74481.50" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/tableTotalCostTxt" />

            <TextView
                android:id="@+id/total_term"
                android:text="$34903.00" />

            <TextView
                android:id="@+id/total_period"
                android:text="$174481.50" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/mortgage_summary_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summaryMortgageTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculations_table_layout" />

    <TextView
        android:id="@+id/mortgage_summary_txt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summaryMortgageTxt2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt" />

    <TextView
        android:id="@+id/mortgage_summary_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="have made 300 monthly (12x per year) payments of $581.60. have paid $100,000.00 in principal, $74,481.50 in interest, for a total of $174,481.50."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt0" />

    <TextView
        android:id="@+id/mortgage_summary_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summaryMortgageTxt4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt1" />

    <TextView
        android:id="@+id/mortgage_summary_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="have made 60 monthly (12x per year) payments of $581.60. have paid $11,492.50 in principal, $23,403.80 in interest, for a total of $34,896.30."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt2" />

    <TextView
        android:id="@+id/mortgage_summary_txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summaryMortgageTxt6"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt3" />

    <TextView
        android:id="@+id/mortgage_summary_txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="have a balance of $88,507.50."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt4" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summaryPaymentDiagTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_summary_txt5" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[GRAPHS]"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView61" />

    <Button
        android:id="@+id/summary_report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summaryReportBtnTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summaryReportDescTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

</androidx.constraintlayout.widget.ConstraintLayout>